[metadata]
name = mini-fastapi-gateway
version = 0.0.2-beta-4
license =

[options]
install_requires =
    fastapi
    sqlalchemy
    alembic
    pydantic_settings
    cachetools
    aiohttp
    ujson


[options.entry_points]
console_scripts =
    gateway-migrate=gateway.server.core.management.migrate:main